--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.header {
+    display: flex !important;
+    justify-content: space-between;
+    border: 1px solid black;
+    padding: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.img {
+    width: 75px;
+    height: 75px;
+    margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-list > ul {
+    display: flex;
+    list-style-type: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-list > ul > li {
+    margin: 20px;
+}
+.login-btn {
+    margin: 10px;
+    cursor: pointer;
+}
+.search-box {
+    margin: 10px;
+    margin-right: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.button-rating {
+    margin-left: 10px;
+}
+.res-card {
+    width: 200px;
+    height: 520px;
+    padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.res-logo {
+    width: 100%;
+}
+
+.res-card:hover {
+    border: 1px solid #f0f0f0;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
 }
